Fix font-size on mobile

--- a/app/main.css
+++ b/app/main.css
@@ -17,8 +17,8 @@ body {
 #main {
   display: flex;
   flex-direction: column-reverse;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1,
@@ -60,7 +60,8 @@ h2 {
 .linkIcons {
   color: #fff;
   font-size: 3em;
-  padding: .25em .35em;
+  padding: .15em .25em;
+  margin: .1em;
 }
 
 #avatar {
